feat: adds cancel appointment
