# internal/infra/http/routes/appointment.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/fio-de-navalha/fdn-back/internal/infra/container"
+	"github.com/fio-de-navalha/fdn-back/internal/infra/http/middlewares"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -9,5 +10,6 @@ func setupAppointmentRouter(router fiber.Router) {
 	router.Get("/barber/:barberId/appointments", container.AppointmentHandler.GetBarberAppointments)
 	router.Get("/customer/:customerId/appointments", container.AppointmentHandler.GetCustomerAppointments)
 
-	router.Post("/appointment", container.AppointmentHandler.Create)
+	router.Post("/appointment", middlewares.EnsureAuth(), container.AppointmentHandler.Create)
+	router.Delete("/appointment/:appointmentId", middlewares.EnsureAuth(), container.AppointmentHandler.Cancel)
 }
